# docs/swagger.json
@@ -153,6 +153,47 @@
                     }
                 }
             }
+        },
+        "/webhook": {
+            "post": {
+                "description": "Webhook endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "webhook"
+                ],
+                "summary": "Webhook endpoint",
+                "operationId": "Webhook",
+                "parameters": [
+                    {
+                        "description": "Body",
+                        "name": "Webhook",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.Webhook"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/deribit.Buy"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -275,7 +316,8 @@
             "type": "object",
             "required": [
                 "amount",
-                "currency"
+                "currency",
+                "token"
             ],
             "properties": {
                 "amount": {
@@ -294,7 +336,8 @@
             "required": [
                 "amount",
                 "currency",
-                "price"
+                "price",
+                "token"
             ],
             "properties": {
                 "amount": {
@@ -308,6 +351,30 @@
                 },
                 "token": {
                     "type": "string"
+                }
+            }
+        },
+        "request.Webhook": {
+            "type": "object",
+            "required": [
+                "operation",
+                "password"
+            ],
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "currency": {
+                    "type": "string"
+                },
+                "operation": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
                 }
             }
         }
